--- a/auth/pyproject.toml
+++ b/auth/pyproject.toml
@@ -1,37 +1,12 @@
-[build-system]
-build-backend = "poetry.core.masonry.api"
-requires = ["poetry-core"]
-
-[tool.poetry]
-authors = [""]
-description = ""
-name = ""
+[project]
+name = "auth"
+version = "0.1.0"
+description = "Add your description here"
 readme = "README.md"
-version = ""
-
-[tool.poetry.dependencies]
-
-
-[tool.poetry.group.dev.dependencies]
-
-[tool.pytest.ini_options]
-DJANGO_SETTINGS_MODULE = "core.settings"
-addopts = "--reuse-db"
-env = [
-
+requires-python = ">=3.12"
+dependencies = [
+    "fastapi>=0.115.11",
+    "pydantic-settings>=2.8.1",
+    "pymongo>=4.11.2",
+    "uvicorn>=0.34.0",
 ]
-filterwarnings = [
-
-]
-markers = [
-
-]
-python_files = "test*.py"
-
-[tool.tomlsort]
-all = true
-in_place = true
-sort_first = ["tool.poetry"]
-spaces_before_inline_comment = 2
-spaces_indent_inline_array = 4
-trailing_comma_inline_array = true
