added the endpoints auth signin and signup

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,8 +17,8 @@ services:
         ports:
             - "${DB_PORT}:27017"
         environment:
-            MONGO_INITDB_ROOT_USERNAME: "\"${DB_USER}\""
-            MONGO_INITDB_ROOT_PASSWORD: "\"${DB_PASSWORD}\""
+            MONGO_INITDB_ROOT_USERNAME: ${DB_USER}
+            MONGO_INITDB_ROOT_PASSWORD: ${DB_PASSWORD}
         volumes:
             - my_db_data:/data/db   
 
