cheking the health of the tests

--- a/auth/pyproject.toml
+++ b/auth/pyproject.toml
@@ -5,14 +5,51 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "anyio>=4.8.0",
     "bcrypt==4.0.1",
     "beanie>=1.29.0",
     "fastapi>=0.115.11",
+    "httpx>=0.28.1",
     "motor>=3.7.0",
     "passlib>=1.7.4",
     "pydantic-settings>=2.8.1",
     "pydantic[email]>=2.10.6",
     "pymongo>=4.11.2",
+    "pytest>=8.3.5",
+    "pytest-asyncio>=0.25.3",
+    "pytest-tornasync>=0.6.0.post2",
+    "pytest-trio>=0.8.0",
     "python-jose>=3.4.0",
+    "requests>=2.32.3",
     "uvicorn>=0.34.0",
 ]
+
+[tool.pytest.ini_options]
+    asyncio_mode = "auto"
+
+[dependency-groups]
+dev = [
+    "ruff>=0.11.0",
+]
+
+[tool.ruff]
+    line-length = 100
+    target-version = "py311"
+
+[tool.ruff.lint]
+    select = [
+        "E",  # pycodestyle errors
+        "W",  # pycodestyle warnings
+        "F",  # pyflakes
+        "I",  # isort
+        "B",  # flake8-bugbear
+        "C4",  # flake8-comprehensions
+    ]
+    ignore = [
+        "E501",  # line too long, handled by black
+        "B008",  # do not perform function calls in argument defaults
+        "C901",  # too complex
+        "W191",  # indentation contains tabs
+        "B904",
+        "E402",
+    ]
