e2e tests for servece auth

--- a/auth/.gitignore
+++ b/auth/.gitignore
@@ -1,8 +1,11 @@
-.venv/
 
+../.mypy_cache/
+../.pytest_cache/
+../.ruff_cache/
+../.vscode/
+
+.venv/
 __pycache__/
-.mypy_cache/
-.pytest_cache/
-.ruff_cache/
 
 .env
+*.pyc
