--- a/events/pyproject.toml
+++ b/events/pyproject.toml
@@ -1,37 +1,63 @@
-[build-system]
-build-backend = "poetry.core.masonry.api"
-requires = ["poetry-core"]
-
-[tool.poetry]
-authors = [""]
-description = ""
-name = ""
+[project]
+name = "auth"
+version = "0.1.0"
+description = "Add your description here"
 readme = "README.md"
-version = ""
-
-[tool.poetry.dependencies]
-
-
-[tool.poetry.group.dev.dependencies]
+requires-python = ">=3.12"
+dependencies = [
+    "fastapi>=0.115.11",
+    "httpx>=0.28.1",
+    "passlib>=1.7.4",
+    "pydantic-settings>=2.8.1",
+    "pydantic[email]>=2.10.6",
+    "pytest>=8.3.5",
+    "pytest-asyncio>=0.25.3",
+    "pytest-tornasync>=0.6.0.post2",
+    "pytest-trio>=0.8.0",
+    "requests>=2.32.3",
+    "types-passlib>=1.7.7.20250319",
+    "uvicorn>=0.34.0",
+]
 
 [tool.pytest.ini_options]
-DJANGO_SETTINGS_MODULE = "core.settings"
-addopts = "--reuse-db"
-env = [
+    asyncio_mode = "auto"
+    filterwarnings = [
+        "ignore: The event_loop fixture provided by pytest-asyncio has been redefined.*:DeprecationWarning",
+        "ignore: Setting per-request cookies.*:DeprecationWarning",
+        "ignore: 'crypt' is deprecated and slated for removal.*:DeprecationWarning",
+    ]
+    markers = [
+        "e2e",
+        "unit",
+    ]
 
+[dependency-groups]
+dev = [
+    "debugpy>=1.8.13",
+    "mypy>=1.15.0",
+    "ruff>=0.11.0",
 ]
-filterwarnings = [
 
-]
-markers = [
+[tool.ruff]
+    line-length = 130
+    target-version = "py311"
 
-]
-python_files = "test*.py"
+[tool.ruff.lint]
+    select = [
+        "E",  
+        "F", 
+        "W", 
+        "I",  
+        "B",  
+        "C",  
+        "UP", 
+        "PL",  
+        "RUF",
+    ]
 
-[tool.tomlsort]
-all = true
-in_place = true
-sort_first = ["tool.poetry"]
-spaces_before_inline_comment = 2
-spaces_indent_inline_array = 4
-trailing_comma_inline_array = true
+[tool.ruff.lint.isort]
+    known-first-party = ["src"]
+    lines-after-imports = 2
+    combine-as-imports = true
+    force-sort-within-sections = true
+    order-by-type = true
