--- a/events/pyproject.toml
+++ b/events/pyproject.toml
@@ -5,9 +5,12 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "alembic>=1.15.1",
+    "asyncpg>=0.30.0",
     "fastapi>=0.115.11",
     "httpx>=0.28.1",
     "passlib>=1.7.4",
+    "pika>=1.3.2",
     "pydantic-settings>=2.8.1",
     "pydantic[email]>=2.10.6",
     "pytest>=8.3.5",
@@ -15,6 +18,7 @@ dependencies = [
     "pytest-tornasync>=0.6.0.post2",
     "pytest-trio>=0.8.0",
     "requests>=2.32.3",
+    "sqlalchemy>=2.0.39",
     "types-passlib>=1.7.7.20250319",
     "uvicorn>=0.34.0",
 ]
