--- a/events/mypy.ini
+++ b/events/mypy.ini
@@ -1,5 +1,5 @@
 [mypy]
-python_version = 3.11
+python_version = 3.12
 mypy_path = src
 namespace_packages = on
 explicit_package_bases = on
@@ -13,16 +13,17 @@ strict_equality = on
 warn_unreachable = on
 disallow_untyped_calls = on
 disallow_untyped_defs = on
-
-plugins =
-    mypy_drf_plugin.main,
-    mypy_django_plugin.main
+plugins = pydantic.mypy
 
 exclude = .*\/migrations\/.*
 
-[mypy.plugins.django-stubs]
-django_settings_module = "core.settings"
+
+[mypy.plugins.fastapi]
 strict_settings = false
+
+[mypy-testcontainers.mongodb]
+ignore_missing_imports = True
+
 
 [mypy-core.test.*]
 disallow_untyped_defs = off
@@ -36,59 +37,28 @@ disallow_untyped_defs = off
 [mypy-*.fixtures.*]
 disallow_untyped_defs = off
 
-[mypy-*.management.*]
-disallow_untyped_defs = off
-
-[mypy-core.validators]
-no_implicit_reexport = off
 
 [mypy-anymail.*]
-ignore_missing_imports = on
-
-[mypy-rest_framework_jwt.*]
-ignore_missing_imports = on
-
-[mypy-djangorestframework_camel_case.*]
-ignore_missing_imports = on
-
-[mypy-django_filters.*]
-ignore_missing_imports = on
-
-[mypy-drf_recaptcha.*]
-ignore_missing_imports = on
-
-[mypy-cmarkgfm.*]
-ignore_missing_imports = on
-
-[mypy-axes.*]
-ignore_missing_imports = on
-
-[mypy-behaviors.*]
-ignore_missing_imports = on
-
-[mypy-kombu.*]
 ignore_missing_imports = on
 
 [mypy-celery.*]
 ignore_missing_imports = on
 
-[mypy-mixer.*]
-ignore_missing_imports = on
-
-[mypy-prettyjson.*]
-ignore_missing_imports = on
-
-[mypy-shortuuid.*]
-ignore_missing_imports = on
-
-[mypy-tree_queries.*]
-ignore_missing_imports = on
-
-[mypy-dj_rest_auth.*]
-ignore_missing_imports = on
-
-[mypy-benedict.*]
-ignore_missing_imports = on
-
 [mypy-tqdm.*]
+ignore_missing_imports = on
+
+
+[mypy-requests.*]
+ignore_missing_imports = on
+
+[mypy-pydantic.*]
+ignore_missing_imports = on
+
+[mypy-sqlalchemy.*]
+ignore_missing_imports = on
+
+[mypy-uvicorn.*]
+ignore_missing_imports = on
+
+[mypy-starlette.*]
 ignore_missing_imports = on
