--- a/events/pyproject.toml
+++ b/events/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "pytest-trio>=0.8.0",
     "requests>=2.32.3",
     "sqlalchemy>=2.0.39",
+    "testcontainers[postgres]>=4.10.0",
     "types-passlib>=1.7.7.20250319",
     "uvicorn>=0.34.0",
 ]
