--- a/events/.dockerignore
+++ b/events/.dockerignore
@@ -1,2 +1,16 @@
-.venv
+.venv/
+.mypy_cache/
+.pytest_cache/
+.ruff_cache/
+.vscode/
+.github/
+
+__pycache__/
+
+mypy.ini
+Makefile
+docker-composee.yml
+Dockerfile
+.gitignore
+README.md
 
