--- a/events/docker-compose.yml
+++ b/events/docker-compose.yml
@@ -22,8 +22,6 @@ services:
             POSTGRES_USER: ${DB_USER}
             POSTGRES_PASSWORD: ${DB_PASSWORD}
             POSTGRES_DB: ${DB_NAME}
-        ports:
-            - ${DB_PORT}:5432
         healthcheck:
             test: ["CMD-SHELL", "pg_isready -U ${DB_USER} -d ${DB_NAME}"]
             interval: 10s
@@ -31,8 +29,9 @@ services:
             retries: 5
             start_period: 30s
         volumes:
-            - pg_data:/var/lib/postgresql/data
+            - pg_data_events:/var/lib/postgresql/data
 
 volumes:
-    pg_data:
+    pg_data_events:
         driver: local
+
