--- a/orders/docker-compose.yml
+++ b/orders/docker-compose.yml
@@ -22,8 +22,8 @@ services:
             POSTGRES_USER: ${DB_USER}
             POSTGRES_PASSWORD: ${DB_PASSWORD}
             POSTGRES_DB: ${DB_NAME}
-        # ports:
-        #     - ${DB_PORT}:$5432
+        ports:
+            - ${DB_PORT}:5432
         healthcheck:
             test: ["CMD-SHELL", "pg_isready -U ${DB_USER} -d ${DB_NAME}"]
             interval: 10s
