--- a/orders/pyproject.toml
+++ b/orders/pyproject.toml
@@ -13,3 +13,9 @@ dependencies = [
     "sqlalchemy>=2.0.40",
     "uvicorn>=0.34.1",
 ]
+
+[dependency-groups]
+dev = [
+    "mypy>=1.15.0",
+    "ruff>=0.11.8",
+]
